[package]
name = "pallet-fungible-assets"
version = "2.0.0-rc6"
authors = ["Centrality Developers <support@centrality.ai>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet for generic asset management"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
sp-runtime = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
frame-support = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
frame-system = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }

[dev-dependencies]
sp-io ={ version = "2.0.0-rc6", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
sp-core = { version = "2.0.0-rc6", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }

[features]
default = ["std"]
std =[
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
