[package]
name = "pallet-fungible-assets"
version = "0.1.0"
authors = ["hammeWang <dsw0602@foxmail.com> "]
edition = "2018"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-support = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }

[dev-dependencies]
sp-io ={  branch = "rococo-branch", git = "https://github.com/paritytech/substrate.git" }
sp-core = {  branch = "rococo-branch", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ["std"]
std =[
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
