[package]
name = "pallet-uniswap-exchanges"
version = "0.1.0"
authors = ["hammeWang <dsw0602@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-application-crypto = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
sp-std = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
sp-io = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
sp-runtime = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
sp-core = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
frame-support = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
frame-system = { version = "2.0.0-rc6", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc6" }
# custom
pallet-fungible-assets = { version = "2.0.0-rc6", default-features = false, path = "../fungible-assets" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-application-crypto/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "pallet-fungible-assets/std",
]