[package]
name = "pallet-uniswap-exchanges"
version = "0.1.0"
authors = ["hammeWang <dsw0602@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-application-crypto = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-std = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-io = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-runtime = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
sp-core = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-support = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
frame-system = {  branch = "rococo-branch", default-features = false, git = "https://github.com/paritytech/substrate.git" }
# custom
pallet-fungible-assets = { default-features = false, path = "../fungible-assets" }

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-application-crypto/std",
    "frame-support/std",
    "frame-system/std",
    "sp-io/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",
    "pallet-fungible-assets/std",
]